Bug: 804860 Reviewer: Jay Wootton Comment: Fix for word wrapping in the "close" button in the admin console.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -1041,6 +1041,7 @@ a, a:visited, a:hover {
     padding-top: 2px;
     padding-bottom: 2px;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .adminControl_CloseLabel:hover
